finalized the design of the schedule

--- a/client/src/styles/_index.scss
+++ b/client/src/styles/_index.scss
@@ -31,6 +31,8 @@ body {
   tab-size: 4;
   font-style: normal;
   letter-spacing: 0.02rem;
+  color: var(--black-text-color);
+  background-color: var(--background-color);
 }
 
 a {
