--- a/client/src/styles/components/Header.scss
+++ b/client/src/styles/components/Header.scss
@@ -4,4 +4,6 @@
   display: flex;
   align-items: center;
   min-width: 100%;
+  background-color: var(--header-bg);
+  box-shadow: var(--header-bsh);
 }
