--- a/client/src/styles/_basis/constants.scss
+++ b/client/src/styles/_basis/constants.scss
@@ -1,22 +1,20 @@
 :root {
   --box-shadow-color: rgba(0, 0, 0, 0.25);
   --popup-background: rgba(0, 0, 0, 0.1);
-  --background-color: var(--white);
-  --black-text-color: var(--dark-blue);
-  --gray-text-color: var(--dark-gray);
+  --box-shadow: 0px 0px 5px var(--box-shadow-color);
 
   --block-border: 1px solid var(--gray-20);
 
   // APP
-  --content-max-width: 80rem;
+  --content-max-width: 84rem;
 
   // HEADER
-  --header-box-shadow: 4px 0px 20px var(--box-shadow-color);
-  --header-background: var(--white);
+  --header-bsh: 4px 0px 20px var(--box-shadow-color);
+
   --header-border: var(--block-border);
   --header-height: 5rem;
 
   // NAVIGATION
-  --nav-width: 18rem;
+  --nav-width: 14rem;
   --nav-bg: var(--white);
 }
