--- a/client/src/styles/components/Navigation.scss
+++ b/client/src/styles/components/Navigation.scss
@@ -1,11 +1,12 @@
 .navigation {
   position: fixed;
-  top: var(--header-height);
-  padding: 1.5rem 2rem 1.5rem 1.5rem;
+  top: calc(var(--header-height) + 1rem);
+  padding: 1rem 0 1rem 0;
   width: var(--nav-width);
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
   background-color: var(--nav-bg);
+  border-radius: 0.5rem;
+  box-shadow: var(--box-shadow);
 }
