--- a/client/src/styles/pages/Timetable.scss
+++ b/client/src/styles/pages/Timetable.scss
@@ -1,5 +1,9 @@
 .timetable-page {
   &__content {
+    max-width: 80%;
     padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 }
