--- a/client/src/styles/components/_index.scss
+++ b/client/src/styles/components/_index.scss
@@ -1,4 +1,11 @@
 @import "Header.scss";
 @import "NavItem.scss";
 @import "Navigation.scss";
+@import "Loader.scss";
+@import "PageHeader.scss";
+@import "Logo.scss";
+
 @import "Timetable";
+@import "Modals";
+@import "Buttons";
+@import "Form";
