--- a/client/src/styles/components/Header.scss
+++ b/client/src/styles/components/Header.scss
@@ -4,6 +4,8 @@
   display: flex;
   align-items: center;
   min-width: 100%;
+  padding: 1rem;
+  justify-content: space-between;
   background-color: var(--header-bg);
   box-shadow: var(--header-bsh);
 }
